# py-scripts

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
src/brew_info/: main.py
src/util/: command.py
