[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mikebd-py-scripts"
version = "0.1.0"
description = "A collection of Python scripts"
authors = [
    { name = "Michael Ben-David" },
]
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
bu = "brew_info.main:main"

[tool.setuptools.packages.find]
where = ["src"]
